[package]
authors = ["dmrasf <dmrasf@qq.com>"]
edition = "2018"
readme = "README.md"
name = "test-stm32f103"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
nb = "1.0.0"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]


# this lets you use `cargo fix`!
[[bin]]
name = "test-stm32f103"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"
